--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@
 }
 
 .res-details {
+  display: flex;
+  flex-direction: column;
   padding: 5px 10px;
 }
 
@@ -59,6 +61,17 @@
   justify-content: start;
 }
 
+.res-container a{
+  color: #000;
+  text-decoration: none;
+}
+
+.res-card h3{
+  margin-top: 0;
+}
+.res-card h4{
+  margin-top: 0;
+}
 /* Shimmer Effect */
 
 body {
@@ -141,4 +154,30 @@ body {
   height: 40px;
   cursor: pointer;
   background-color: lightskyblue;
+}
+
+.error {
+  background-image: url("https://cdn4.vectorstock.com/i/1000x1000/32/03/404-error-page-with-space-themes-vector-29773203.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 80vw;
+  height: 90vh;
+  margin: auto;
+  background-position: center;
+}
+
+.res-detail-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.res-details {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.res-recommended {
+  align-self: start;
+  margin-left: 300px;
 }
