--- a/style.css
+++ b/style.css
@@ -1,189 +1,80 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.logo {
-  width: 100px;
-}
-
-.nav-items > ul {
-  display: flex;
-  padding: 0 20px;
-  list-style-type: none;
-}
-
-.nav-items > ul > li {
-  padding: 10px;
-  margin: 10px;
-  font-size: 18px;
-  cursor: pointer;
-}
-
-.nav-items li:hover {
-  color: orange;
-}
-
-.res-card {
-  width: 250px;
-  height: 400px;
-  border-radius: 20px;
-  overflow: hidden;
-}
-
-.res-card:hover {
-  cursor: pointer;
-  box-shadow: 1px 1px 10px 1px #000;
-}
-
-.res-details {
-  display: flex;
-  flex-direction: column;
-  padding: 5px 10px;
-}
-
-.filter-btn {
-  margin: 10px;
-  cursor: pointer;
-}
-
-.res-logo {
-  width: 100%;
-  height: 50%;
-}
-
-.res-container {
-  width: 90%;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  margin: auto;
-  justify-content: start;
-}
-
-.res-container a {
-  color: #000;
-  text-decoration: none;
-}
-
-.res-card h3 {
-  margin-top: 0;
-}
-.res-card h4 {
-  margin-top: 0;
-}
-/* Shimmer Effect */
-
-body {
-  background: #f5f5f5;
-}
-
-.card {
-  position: relative;
-  -webkit-box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-  border-radius: 6px;
-  height: 500px;
-  overflow: hidden;
-  width: 350px;
-  margin: 40px auto;
-
-  .shimmerBG {
-    animation-duration: 2.2s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: infinite;
-    animation-name: shimmer;
-    animation-timing-function: linear;
-    background: #ddd;
-    background: linear-gradient(to right, #f6f6f6 8%, #f0f0f0 18%, #f6f6f6 33%);
-    background-size: 1200px 100%;
+.cards-container, .offer-scroller {
+  &::-webkit-scrollbar {
+    display: none;
   }
-  .media {
-    height: 200px;
-  }
+}
 
-  .p-32 {
-    padding: 32px;
-  }
+.career-img {
+  background-image: url(./src/assets/images/career.jpg);
+}
 
-  .title-line {
-    height: 24px;
-    width: 100%;
-    margin-bottom: 12px;
-    border-radius: 20px;
-  }
+.title {
+  width: 40%;
+}
+.link {
+  width: 60%;
+}
+.description {
+  width: 70%;
+}
 
-  .content-line {
-    height: 8px;
-    width: 100%;
-    margin-bottom: 16px;
+.content-shimmer {
+  .shimmer {
+    padding: 5px;
+    width: 95%;
+    height: 120px;
+    margin: 10px auto;
+    background: #ffffff;
+  }
+  .shimmer .image-card {
+    height: 90px;
+    width: 90px;
+    float: right;
     border-radius: 8px;
   }
+  .stroke {
+    height: 15px;
+    background: #777;
+    margin-top: 20px;
+  }
 
-  .end {
-    width: 40%;
+  .wrapper {
+    width: 0px;
+    animation: fullView 0.5s forwards linear;
+  }
+
+  .animate {
+    animation: shimmer 3s;
+    animation-iteration-count: infinite;
+    background: linear-gradient(to right, #e6e6e6 5%, #cccccc 25%, #e6e6e6 35%);
+    background-size: 1000px 100%;
   }
 }
 
-.m-t-24 {
-  margin-top: 24px;
-}
-
-@-webkit-keyframes shimmer {
-  0% {
-    background-position: -100% 0;
-  }
+@keyframes fullView {
   100% {
-    background-position: 100% 0;
+    width: 100%;
   }
 }
 
 @keyframes shimmer {
-  0% {
-    background-position: -1200px 0;
+  from {
+    background-position: -1000px 0;
   }
-  100% {
-    background-position: 1200px 0;
+  to {
+    background-position: 1000px 0;
   }
 }
 
-.login {
-  padding: 0 20px;
-  width: 80px;
-  height: 40px;
-  cursor: pointer;
-  background-color: lightskyblue;
-}
-
-.error {
-  background-image: url("https://cdn4.vectorstock.com/i/1000x1000/32/03/404-error-page-with-space-themes-vector-29773203.jpg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: 80vw;
-  height: 90vh;
-  margin: auto;
-  background-position: center;
-}
-
-.res-detail-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.res-details {
-  width: 60%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.res-recommended {
-  align-self: start;
-  margin-left: 300px;
-}
-
-.user-details {
-  border: 1px solid #000;
-  padding: 10px;
-  margin: 20px 0;
+@keyframes shimmer {
+  from {
+    background-position: -1000px 0;
+  }
+  to {
+    background-position: 1000px 0;
+  }
 }
